--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "trumplang",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "repl/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "babel-node src/repl"
   },
   "jest": {
     "verbose": true,
@@ -16,6 +17,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.22.2",
     "babel-jest": "^18.0.0",
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-do-expressions": "^6.22.0",
